package visitor.dmeo1;

/**
 * @Classname Action
 * @Description TODO
 * @Date 2020/3/23 15:10
 * @Author Danrbo
 */
public abstract class Action {
    abstract void act(Man man);

    abstract void act(Woman woman);
}
