package visitor.dmeo1;

/**
 * @Classname Person
 * @Description TODO
 * @Date 2020/3/23 15:02
 * @Author Danrbo
 */

/**
 * 人接口
 */
public interface Person {
    void accept(Situation situation);
}
